--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,11 +71,11 @@ dependencies {
     kapt 'com.android.databinding:compiler:3.0.1'
     implementation "com.android.support:support-compat:27.1.1"
     implementation 'com.github.kinfoundation:kin-core-android:0.0.4'
-    implementation 'com.google.firebase:firebase-messaging:12.0.1'
+    implementation 'com.google.firebase:firebase-messaging:15.0.2'
     implementation 'com.airbnb.android:lottie:2.5.0'
     implementation 'androidx.core:core-ktx:0.3'
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-vector-drawable:27.1.1'
     implementation 'com.google.code.gson:gson:2.8.2'
@@ -96,6 +96,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     testImplementation 'org.mockito:mockito-core:2.15.0'
+    implementation 'com.google.firebase:firebase-auth:15.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
