--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -41,6 +42,7 @@
         <activity
             android:name=".view.phoneVerify.PhoneVerifyActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
             />
 
         <activity
