--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     kapt "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     kapt 'com.android.databinding:compiler:3.0.1'
-    implementation "com.android.support:support-compat:27.1.1"
+    implementation 'com.android.support:support-compat:27.1.1'
     implementation 'com.github.kinfoundation:kin-core-android:0.0.4'
     implementation 'com.google.firebase:firebase-messaging:15.0.2'
     implementation 'com.airbnb.android:lottie:2.5.0'
