--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
@@ -48,6 +49,12 @@
         <activity
             android:name=".view.spend.PurchaseOfferActivity"
             android:screenOrientation="portrait"
+            />
+
+        <activity
+            android:name=".view.spend.Peer2PeerActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
             />
 
         <service android:name=".network.firebase.KinInstanceIdService">
