--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
-        versionName "0.7.1"
+        versionName "0.7.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         dataBinding {
@@ -35,6 +35,8 @@ android {
         buildConfigField "String", "StageBaseUrl", globalProperties["StageBaseUrl"]
         buildConfigField "String", "ProdBaseUrl", globalProperties["ProdBaseUrl"]
         buildConfigField "String", "TestFairyApiSecret", globalProperties["TestfairyApiSecret"]
+        buildConfigField "boolean", "isPhoneVerificationEnabled",
+                globalProperties["isPhoneVerificationEnabled"]
         multiDexEnabled true
     }
     buildTypes {
