--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     testImplementation 'org.mockito:mockito-core:2.15.0'
     implementation 'com.google.firebase:firebase-auth:15.1.0'
+    implementation 'com.google.dagger:dagger-android:2.11'
+    compileOnly 'org.glassfish:javax.annotation:10.0-b28'
+    kapt 'com.google.dagger:dagger-android-processor:2.15'
+    kapt 'com.google.dagger:dagger-compiler:2.15'
+    implementation 'com.google.dagger:dagger-android-support:2.15' // if you use the support libraries
 }
 
 apply plugin: 'com.google.gms.google-services'
