--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:theme="@style/Questionnaire"/>
 
         <activity
-            android:name=".view.earn.CompleteWebTaskActivity"
+            android:name=".view.earn.WebTaskCompleteActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Questionnaire"/>
 
