--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,9 @@ android {
 kapt {
     generateStubs = true
 }
+androidExtensions {
+    experimental = true
+}
 
 repositories {
     mavenCentral()
@@ -110,7 +113,7 @@ dependencies {
     compileOnly 'org.glassfish:javax.annotation:10.0-b28'
     kapt 'com.google.dagger:dagger-android-processor:2.15'
     kapt 'com.google.dagger:dagger-compiler:2.15'
-    implementation 'com.google.dagger:dagger-android-support:2.15' // if you use the support libraries
+    implementation 'com.google.dagger:dagger-android-support:2.15'
 }
 
 apply plugin: 'com.google.gms.google-services'
