--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
 
     <application
         android:name=".KinitApplication"
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_app"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_app"
@@ -44,8 +43,9 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".view.backup.WalletBackupActivity"
-            android:screenOrientation="portrait" />
+            android:name=".view.backup.BackupWalletActivity"
+            android:screenOrientation="portrait"
+            />
 
         <activity
             android:name=".view.phoneVerify.PhoneVerifyActivity"
