--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,12 +44,12 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".view.restore.RestoreWalletActivity"
-            android:screenOrientation="portrait" />
-
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".view.backup.BackupWalletActivity"
             android:screenOrientation="portrait"
-            />
+            android:windowSoftInputMode="adjustPan" />
 
         <activity
             android:name=".view.createWallet.CreateWalletActivity"
