--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,13 @@
 buildscript {
     ext.kotlin_version = '1.2.30'
     repositories {
+        mavenLocal()
         google()
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:3.2.1'
