--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ android {
     testOptions {
         unitTests {
             includeAndroidResources = true
+            unitTests.returnDefaultValues = true
         }
     }
     compileOptions {
