--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,8 +109,8 @@ dependencies {
     implementation 'com.amplitude:android-sdk:2.14.1'
     implementation 'nl.dionsegijn:konfetti:1.1.2'
     implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.google.android.gms:play-services-vision:15.0.2'
-    implementation 'com.google.android.gms:play-services-safetynet:15.0.1'
+    implementation 'com.google.android.gms:play-services-vision:17.0.2'
+    implementation 'com.google.android.gms:play-services-safetynet:16.0.0'
     implementation 'com.android.support:gridlayout-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.0@aar') {
@@ -133,6 +133,7 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.15'
     implementation 'com.google.dagger:dagger-android-support:2.15'
     kaptTest 'com.google.dagger:dagger-compiler:2.15'
+    compile project(path: ':kinit-client-validation-android-module')
 }
 
 apply plugin: 'com.google.gms.google-services'
