--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
             android:theme="@style/Questionnaire" />
 
         <activity
+            android:name=".view.RegisterErrorActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Questionnaire" />
+
+        <activity
             android:name=".view.earn.WebTaskCompleteActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Questionnaire" />
