--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,6 +88,17 @@
             android:name=".view.faq.FAQActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".view.transfer.TransferLauncherActivity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="kin.transfer.request" />
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+
+        </activity>
+
+
         <service android:name=".firebase.KinInstanceIdService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
