--- a/.gitignore
+++ b/.gitignore
@@ -71,5 +71,5 @@ app/.settings/org.eclipse.buildship.core.prefs
 /projectFilesBackup/.idea/workspace.xml
 
 secrets\.tar\.gz
-app/tippic\.properties
 projectFilesBackup1/.idea/workspace.xml
+app/kinit\.properties
