--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,12 +45,12 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
 
-        <service android:name="org.kinecosystem.tippic.firebase.KinInstanceIdService">
+        <service android:name="org.kinecosystem.tippic.firebase.TippicInstanceIdService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-        <service android:name="org.kinecosystem.tippic.firebase.KinMessagingService">
+        <service android:name="org.kinecosystem.tippic.firebase.TippicMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
