--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,6 +101,9 @@
         <activity
             android:name=".view.spend.EcoAppsInfoActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.migrateWallet.MigrateWalletActivity"
+            android:screenOrientation="portrait" />
 
         <activity android:name=".view.transfer.TransferActivity"
             android:screenOrientation="portrait"
