--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,6 +136,7 @@ dependencies {
     kaptTest 'com.google.dagger:dagger-compiler:2.15'
     compile project(path: ':kinit-client-validation-android-module')
     implementation 'com.github.kinecosystem:kin-migration-module-android:1.0.5'
+    api 'com.github.kinecosystem:kin-utils-android:1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
