--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,11 @@ dependencies {
     kapt "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     kapt 'com.android.databinding:compiler:3.0.1'
     implementation 'com.android.support:support-compat:27.1.1'
+
+    implementation 'com.github.kinecosystem:move-kin-android:testTransfer'
+
+
+
     implementation 'com.github.kinecosystem:kin-core-android:a3210c241c'
     implementation 'com.github.kinfoundation.kin-ecosystem-android-sdk:transfer:0.8.0'
     implementation 'com.google.firebase:firebase-messaging:15.0.2'
