--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,9 @@
 
 buildscript {
     ext.kotlin_version = '1.2.30'
-    // TODO change to released versions
-    ext.moveKinVersion = '9bc680ad35'
-    ext.kinSdkVersion = '34fda67aa6f81a29cd40a7d457c5341f00f98c3f'
+    ext.moveKinVersion = '1.0.3'
+    ext.kinSdkVersion = '1.0.4.1'
+    ext.migrationModuleVersion = '1.0.8'
     repositories {
         mavenLocal()
         google()
