--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     ext.kotlin_version = '1.2.30'
+    ext.moveKinVersion = '1.0.3'
+    ext.kinSdkVersion = '1.0.4.1'
+    ext.migrationModuleVersion = '1.0.8'
     repositories {
         mavenLocal()
         google()
