--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.github.kinecosystem.move-kin-android:appsTransfer:36787cddaf2f345eb8083d86eaf9f556ec4403f7'
     implementation 'com.amplitude:android-sdk:2.14.1'
     implementation 'nl.dionsegijn:konfetti:1.1.2'
     implementation 'com.android.support:cardview-v7:27.1.1'
